--- a/CSS-section/how-css-is-structured/index.html
+++ b/CSS-section/how-css-is-structured/index.html
@@ -9,5 +9,14 @@
 	<body>
 		<p>Create your test HTML here</p>
 		<p class="special">What color am I?</p>
+		<div class="box">
+			<p>
+				<span>It should be me</span>
+			</p>
+			<p>
+				<span> Who is the first child? </span>
+			</p>
+		</div>
+		<a href="#">www.css.com</a>
 	</body>
 </html>
