--- a/CSS-section/5-cascade-specificity-inheritance/1/index.html
+++ b/CSS-section/5-cascade-specificity-inheritance/1/index.html
@@ -22,6 +22,10 @@
 			div div li a {
 				color: rebeccapurple;
 			}
+
+			#outer div ul .nav a {
+				background-color: initial;
+			}
 		</style>
 	</head>
 
