--- a/CSS-section/7-backgrounds-and-borders/2/index.html
+++ b/CSS-section/7-backgrounds-and-borders/2/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Box Model Task 2: Margin, Border, and Padding</title>
-		<link rel="stylesheet" href="../styles.css" />
-
+		<title>Backgrounds and Borders: Task 2</title>
 		<style>
 			body {
 				background-color: #fff;
@@ -13,15 +11,20 @@
 				padding: 1em;
 				margin: 0;
 			}
+
+			* {
+				box-sizing: border-box;
+			}
 			.box {
-				border: 5px dotted black;
-				margin: 20px 1em 40px 2em;
-				padding: 1em;
+				width: 300px;
+				padding: 0.5em;
 			}
 		</style>
 	</head>
 
 	<body>
-		<div class="box">I use the standard box model.</div>
+		<div class="box">
+			<h2>Backgrounds &amp; Borders</h2>
+		</div>
 	</body>
 </html>
