--- a/CSS-section/7-backgrounds-and-borders/2/index.html
+++ b/CSS-section/7-backgrounds-and-borders/2/index.html
@@ -18,6 +18,17 @@
 			.box {
 				width: 300px;
 				padding: 0.5em;
+				border: 5px solid lightblue;
+				border-radius: 20px 0px 40px;
+			}
+
+			h2 {
+				background-image: url(star.png), url(star.png);
+				background-repeat: no-repeat, repeat-y;
+				background-position: left, right;
+				text-align: center;
+				padding-left: 40px;
+				padding-right: 40px;
 			}
 		</style>
 	</head>
