--- a/CSS-section/7-backgrounds-and-borders/1/index.html
+++ b/CSS-section/7-backgrounds-and-borders/1/index.html
@@ -18,6 +18,15 @@
 			.box {
 				width: 500px;
 				padding: 0.5em;
+				border: 5px solid black;
+				border-radius: 10px;
+				background-image: url(balloons.jpg);
+				background-size: cover;
+			}
+
+			h2 {
+				background-color: rgb(0 0 0 / 50%);
+				color: white;
 			}
 		</style>
 	</head>
